# keygrid

./: .TODO  .gitignore  README.md  meson.build  xyz.roxwize.keygrid.json
data/: meson.build  xyz.roxwize.keygrid.desktop.in  xyz.roxwize.keygrid.gresource.xml  xyz.roxwize.keygrid.gschema.xml  xyz.roxwize.keygrid.metainfo.xml.in
data/ui/: main.ui
po/: POTFILES  en.po  keygrid.pot  meson.build
src/: Application.vala  LayoutRenderer.vala  MainWindow.vala
src/Views/: HelpView.vala
